examples/test/testpolicy15607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15607
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key18: value22
      key27: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value39
          key42: value1
          key19: value32
      podSelector:
        matchLabels:
          key3: value43
          key47: value33
          key29: value23
